The stupid fix to a division by zero problem. There probably is a better solution but this at least stops Strigi from crashing.

BUG: 234398

svn path=/trunk/kdesupport/strigi/; revision=1115155